--- a/v3/frontend_v1/src/index.html
+++ b/v3/frontend_v1/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Gestão de Eventos e Bebidas</title>
+  <title>Caneco Cheio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
